sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var tri = false 
  while (tri = false) {
    var n = 0
    for (i <- 0 to getNombreValeurs()-2){
      if (plusPetitQue(i, i+1)){
        echange(i, j)
        n= n+1        
      }
    }
    if (n == 0){
        tri = true
  }
  n=0 
 }
}